<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_mainblue"
    tools:context=".fragments.profile">


    <FrameLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"



    <TextView
        android:id="@+id/dashboard_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:shadowColor="#40000000"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="1.5"
        android:text="@string/my_profile"
        android:textColor="@color/orange"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textview_name"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/name"
        android:textColor="#0B0B0B"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="241dp" />

    <TextView
        android:id="@+id/textview_age"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/age"
        android:textColor="#0B0B0B"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="290dp" />

    <TextView
        android:id="@+id/textview_email"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/email"
        android:textColor="#0B0B0B"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="342dp" />

    <TextView
        android:id="@+id/textview_password"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/current_password"
        android:textColor="#0B0B0B"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="384dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="profile"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="634dp" />
</androidx.constraintlayout.widget.ConstraintLayout>